force-app/main/default/objects/Event__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This field contains End Date of the Event</description>
    <inlineHelpText>Provide End Date of the Event</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>