force-app/main/default/objects/Event__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <description>This field contains Max Seats  in the Event</description>
    <inlineHelpText>Provide Max Seats in the Event</inlineHelpText>
    <label>Max Seats</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>