force-app/main/default/objects/Event__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This field contains Name of Event</description>
    <inlineHelpText>Provide Name of Event</inlineHelpText>
    <label>Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>