force-app/main/default/objects/Event__c/fields/Starting_Date__c.field-meta.xml
<CustomField>
    <fullName>Starting_Date__c</fullName>
    <description>This field contains Starting Date of Event</description>
    <inlineHelpText>Fill Starting Date of Event</inlineHelpText>
    <label>Starting Date</label>
    <type>DateTime</type>
</CustomField>