force-app/main/default/objects/Event__c/validationRules/In_Person_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Person_Location</fullName>
    <active>true</active>
    <description>If In-Person is Selected as Value for Event Type field, then User must need to Select Location on Event Record.</description>
    <errorConditionFormula>AND( 
    ISPICKVAL( Event_Type__c , &quot;In-Person&quot;), 
    ISBLANK( Location__c)
    )</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>User must select Location on Event Record.</errorMessage>
</ValidationRule>