force-app/main/default/objects/Event__c/validationRules/Recurring_Frequency_Not_Filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Frequency_Not_Filled</fullName>
    <active>false</active>
    <description>If Recurring? checkbox is not checked then user can not fill Frequency field</description>
    <errorConditionFormula>AND(
    Recurring__c = False,
    NOT(ISPICKVAL(Frequency__c, &quot;&quot;))
)</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>user must not fill Frequency field.</errorMessage>
</ValidationRule>