force-app/main/default/objects/Event__c/validationRules/Start_End_Date_Not_Filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_End_Date_Not_Filled</fullName>
    <active>true</active>
    <description>End Date/Time must be at-least 1 day ahead of Start Date/Time</description>
    <errorConditionFormula>AND( 
    NOT(
        ISBLANK( End_Date__c )
        ) ,
        ISBLANK( Starting_Date__c )
    )</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Start Date/Time must be filled.</errorMessage>
</ValidationRule>