force-app/main/default/objects/Event__c/validationRules/Virtual_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Virtual_Location</fullName>
    <active>true</active>
    <description>If Virtual is Selected as Value for Event Type field, then Prevent User to Select Location on Event Record.</description>
    <errorConditionFormula>AND( ISPICKVAL( Event_Type__c , &quot;Virtual&quot;), NOT(ISBLANK( Location__c) ))</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Location is not available in virtual event type.</errorMessage>
</ValidationRule>